[gd_scene load_steps=3 format=2]

[ext_resource path="res://objects/player/PlayerCorpse.gd" type="Script" id=1]
[ext_resource path="res://sprites/anim/blood.png" type="Texture" id=2]

[node name="Corpse" type="Node2D"]
script = ExtResource( 1 )

[node name="BloodPar" type="CPUParticles2D" parent="."]
z_index = 20
z_as_relative = false
emitting = false
amount = 50
lifetime = 5.0
one_shot = true
explosiveness = 1.0
lifetime_randomness = 0.5
local_coords = false
texture = ExtResource( 2 )
flag_align_y = true
direction = Vector2( 0, -1 )
spread = 130.0
gravity = Vector2( 0, 1000 )
initial_velocity = 300.0
initial_velocity_random = 0.6
scale_amount = 7.0
scale_amount_random = 0.8

[node name="RespawnTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="PopAudio" type="AudioStreamPlayer2D" parent="."]
bus = "Sound"

[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
